@@ -279,6 +279,7 @@ Removals:
    * Deprecate elm_web_uri_set(), elm_web_uri_get() and "uri,changed" signal for web, web2.
    * Naviframe: Dont' be popped if the event is freezed and popping is going on.
    * Ctxpopup: Apply current ctxpopup style to the list.
+   * Popup: Fix the corrupted internal widget tree that caused elm_theme_set() doesn't work correctly.
 
 Changes since Elementary 1.0.0:
 -------------------------
